# Analysis-and-prediction-of-supply-chain

./: .gitignore  README.md  analyze_data.py  environment.yml  pyproject.toml  requirements.txt
data/raw/: simulated_kaggle_compatible.csv  simulated_supply_chain_data.csv  simulation_events.csv
src/supply_chain/: __init__.py  app.py  config.py  logging_config.py  schemas.py
src/supply_chain/cli/: main.py
src/supply_chain/data/: __init__.py  cleaner.py  loader.py  preprocessing.py  split.py  time_features.py  validation.py
src/supply_chain/eda/: __init__.py  analyzer.py
src/supply_chain/simulation/: delays.py  engine.py  graph.py  integration.py  schema.py  tsplib_parser.py  visualization.py
tests/: test_preprocessing.py  test_schemas.py  test_split.py  verify_correlations.py  verify_enhanced_viz.py  verify_graph_sparsity.py  verify_params.py  verify_spawn_locations.py  verify_viz.py
