[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supply_chain"
version = "0.1.0"
description = "Big Data Supply Chain Analytics"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["supply_chain"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
